[package]
name = "istanbul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tandem_http_client = { path = "./tandem/tandem_http_client", features = ["bin"] }
tandem_http_server = { path = "./tandem/tandem_http_server", features = ["bin"] }
text2art = "1.0.2"
